Revision history for Marquee

0.27 2013/11/11
  - Now content type header is auto set when missing.

0.26 2013/11/10
  - Added FormValidatorLazy plugin.
  - Refactored static/dinamic dispach logic to serve method.
  - Changed router api for consistency.
  - Made unserved route not tot fallback to default route.
  - Added viax method to router API.
  - Improved MIME type detection.

0.25 2013/05/31
  - Added SCSS plugin
  - Updated API usage in favor of mojo v4.13

0.24 2013/05/31
  - Fixed a bug on Official site example.
  - Now it depends on Mojolicious v4.09.

0.23 2012/11/26
  - Improved installation direction.

0.22 2012/11/26
  - Improved documentations.
  - Added install.sh

0.21 2012/10/21
  - Removed deprecated methods.
  - Impoved router on capturing hehavior.

0.20 2012/10/01
  - Fixed that some tests have been unpassed.
  - Fixed potential bug on debug screen .

0.19 2012/09/28
  - Refactored add_handler.
  - Deprecated add_handler in favor of $app->dynamic->add_handler.
  - Improved debug screen.

0.18 2012/09/20
  - Refactored many features into classes.
  - Deprecated path_to_type in favor of $app->types->type_by_path.
  - Deprecated render_ssi in favor of $app->dynamic->render.
  - Deprecated search_static in favor of $app->static->search.
  - Deprecated search_template in favor of $app->dynamic->search.
  - Deprecated serve_static in favor of $app->static->serve.
  - Deprecated serve_dynamic in favor of $app->dynamic->serve.
  - Deprecated ssi_handlers in favor of $app->dynamic->handlers.

0.17 2012/09/14
  - Improved documentations.
  - Fixed ETag plugin to cause less undef warnings.
  - Changed API of Marquee::Cache not to accept multiple expiretion code.

0.16 2012/09/11
  - Added ETag plugin.
  - Added maxage option for static file caching and refactored to a class.
  - Fixed official site in Japanese.

0.15 2012/09/10
  - Improved bundle css styles.
  - Added session function for ep renderer.
  - Fixed some documents.

0.14 2012/09/07