@@ -1,0 +1,4 @@
+<%
+    Marquee->c->res->code(200);
+    Marquee->c->res->body(Mojo::JSON->new->encode({a => 1, b => 2}));
+=%>
