@@ -2,6 +2,7 @@ Revision history for Marquee
 
 0.27 2013/11/11
   - Now content type header is auto set when missing.
+  - Now dynamic renderer do not to overwrite existing response.
 
 0.26 2013/11/10
   - Added FormValidatorLazy plugin.
